--- a/app/views/apprenticeships/edit.html.erb
+++ b/app/views/apprenticeships/edit.html.erb
@@ -1,10 +1,1 @@
-<% simple_form_for (@apprenticeship, html: {class: 'form-horizontal'}) do |a|%>
-<%= f.input :name_of_apprentor %>
-    <%= f.input :description %>
-    <%= f.input :starting %>
-    <%= f.input :ending %>
-    <%= f.input :city %>
-    <%= f.input :country %>
-    <%= f.input :remote %>
-<%= f.submit %>
-<% end %>
+<%= render 'form' %>
