--- a/app/views/apprenticeships/index.html.erb
+++ b/app/views/apprenticeships/index.html.erb
@@ -1,4 +1,9 @@
-
+<div class="col-lg-12">
+  <div class="jumbotron">
+    Browse below to find out about exciting apprenticeship opportunities.
+    <span class="btn btn-primary btn-lg"><%= link_to "Submit An Apprenticeship", new_apprenticeship_path %></span>
+  </div>
+</div>
 
 <table class="table table-striped">
 <tr>
