--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-6 %>"
 <%= simple_form_for @event, input_html: {class: 'form-horizontal'} do |f|%>
-    <%= f.input :name_of_events %>
+    <%= f.input :name_of_event %>
     <%= f.input :description %>
     <%= f.input :location %>
     <%= f.input :directions %>
